Add photos in Osaka castle

--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
 </head>
 <body>
     <h1>Lost in Eyes</h1>
-    <p>This maybe the second or third time to go to Osaka castle. But, I can still feel the shock that beauty give.</p>>	
+    <p>Hello, You maybe wonder what this website is.</br>
+    Actually, this is a personal website for sharing photos I took in Japan.</br>
+    If you like any photos in my site, you can access it anytime you want.</p>>
+    <h2>Osaka Castle</h2>
+    <p>
+    This is the third time that I went to Osaka Castle in <b>2017/03/05</b>.</br>
+    Although got lost in middle way, I still feel happy and shocked by the beauty the castle gave me.</br>
+    As the actual time is PM 2 o'clock, the light is a little gray. Sorry for that.</br>
+    <img src = "Photos/Osaka_castle_01.jpeg"></br>
+    <b>Picture 01 At the behind of Castle</b>></br>
+    <img src = "Photos/Osaka_castle_02.jpeg"></br>
+    <b>Picture 02 In Plum Forest</b>></br>
+    <img src = "Photos/Osaka_castle_03.jpeg"></br>
+    <b>Picture 03 Plum Blossom</b>></br>
+    </p>>	
 
 </body>>
 </html>
