Add photos in Tsulumi Ryokuchi Park

--- a/index.html
+++ b/index.html
@@ -5,9 +5,61 @@
 </head>
 <body>
     <h1>Lost in Eyes</h1>
-    <p>Hello, You maybe wonder what this website is.</br>
+    <h3>
+    Hi, Welcome to my website.</br>
+    you maybe wonder what this website is. Just let me tell.</br>
     Actually, this is a personal website for sharing photos I took in Japan.</br>
-    If you like any photos in my site, you can access it anytime you want.</p>>
+    If you like any photos in my site, you can access it anytime you want.</br>
+    And this is for you.</br>
+    </h3>
+    </br>
+    <h2>Tsurumi Ryokuchi Park</h2>
+    <p><b>2017/03/19</b>, another <b>sunny</b>> day. After lunch, I decide to have a relex.</br>
+    After searching by Google maps for a few minutes, a Park, <b>Tsurumi Ryokuchi Park</b> as I </br>
+    write the title, makes me instristed. And it's not very long away, only one hour ride by train.</br>
+    So I set off quickly after packaging my Canon 100D.</br>
+    </br>
+    <b>One hour later,</b> precisely 3 o'clock PM, I arrived the <b>Tsurumi Ryoukuchi Park</b>.</br>
+    I felt very excited because I thought the <b>Sakura</b> was open by the fisrt sight. Actually,</br>
+    It's found to be peach flowers. But, still beauful. Here it is.</br>
+    </br>
+    <img src="Photos/TsurumiRyokuchiPark01.png"></br>
+    <b>Peach Flowers 01</b></br>
+    </br>
+    </br>
+    <img src="Photos/TsurumiRyokuchiPark02.png"></br>
+    <b>Peach Flowers 02</b></br>
+    </br>
+    </br>
+    <b>Then,</b> after walking around in the Park, I found my building style from all around the world, like </br>
+    China, South Korea, Island, England, and so on. </br>
+    <img src="Photos/TsurumiRyokuchiPark03.png"></br>
+    <b>Chinese Ancient Bulidings</b></br>
+    </br>
+    </br>
+    <img src="Photos/TsurumiRyokuchiPark04.png"></br>
+    <b>South Korea Style Buildings</b></br>
+    </br>
+    </br>
+    <b>By</b> waling close to the lake in the centor of park, the beauty of pure yellow rape flowers stopped me. </br>
+    The funny thing is that a big dog party is held there. Those cute things attracted too many fans.</br>
+    I also took some photos of dog party. It looks they really enjoyed the show and became the focus </br> of park.
+    <img src="Photos/TsurumiRyokuchiPark05.png"></br>
+    <b>The Dog Party nearby the Lake</b></br>
+    </br>
+    </br>
+    <img src="Photos/TsurumiRyokuchiPark06.png"></br>
+    <b>Flowers Unknown</b></br>
+    </br>
+    </br>
+    <b>Time</b> really passed fast. Before I realised, it's 5 o'clock PM. As the Park closes in 6 o'clock, </br>
+    I have to walk fast and look for the gate. Just by walking around the lake at the same time, I found </br>
+    some bird were having a nice afternoon swim in the lake. As an old saying in Chinese, the ducks </br>
+    firstly the warmth of spring water. If you don't understand, just see the picture as follow.</br>
+    <img src="Photos/TsurumiRyokuchiPark07.png"></br>
+    <b>Birds in Lake</b></br>
+    </p>
+
     <h2>Osaka Castle</h2>
     <p>
     This is the third time that I went to Osaka Castle in <b>2017/03/05</b>.</br>
@@ -15,11 +67,18 @@
     As the actual time is PM 2 o'clock, the light is a little gray. Sorry for that.</br>
     <img src = "Photos/Osaka_castle_01.jpeg"></br>
     <b>Picture 01 At the behind of Castle</b>></br>
+    </br>
     <img src = "Photos/Osaka_castle_02.jpeg"></br>
     <b>Picture 02 In Plum Forest</b>></br>
+    </br>
+    </br>
     <img src = "Photos/Osaka_castle_03.jpeg"></br>
     <b>Picture 03 Plum Blossom</b>></br>
-    </p>>	
+    </br>
+    </br>
+    </p>
+
+    <h5>                                                 Design by SUN MIAO</h5>>
 
 </body>>
 </html>
