--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div id="logo"><a href="cninjp.com"></a></div>
 
 		<nav class="main-nav">
-				<ul><li><a href="./" rel="" id="current">Home</a></li></ul>
+				<ul><li><a href="./" rel="" id="current">Home</a></li><li><a href="about/" rel="">About</a></li></ul>
 		</nav> <!-- main-nav -->
 	</header>
 
